tests/sem/error/struct_field.c
struct a {
    int b;
};

int main() {
    struct a b;
    return b.c;
}